--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <div class="info">
             <i class='bx bxs-phone-call' > <p> +250782025442</p></i>
             <i class='bx bx-envelope'><p> nikuzwelaetitia@gmail.com</p></i><br>
-            <i class='bx bxl-linkedin-square'> <p> Nikuzwe Laetitia</p></i>
+            <a href="https://www.linkedin.com/in/nikuzwe-laetitia-44412126a"><i class='bx bxl-linkedin-square'> <p> Nikuzwe Laetitia</p></i></a>
                 </div>
             </div> 
             <div class="temple">
@@ -70,14 +70,18 @@
         <div class="reference">
             <h1>REFERENCE</h1>
             <div class="ref1">
-                <h1>UR-CST</h1>
+                <h1>UR-CST/ Head of Department</h1>
                 <li>KN 67 Street Nyarugenge,Kigali</li>
                 <li>info.cst@ur.ac.rw</li>
+                <li>pbakunzibake@gmail.com</li>
+                <li>Tel: +250788517280</li>
             </div>
             <div class="ref1">
                 <h1>IGIRE RWANDA, SheCanCode</h1>
                 <li>KG 549 St 36</li>
                 <li>igirerwanda@gmail.com</li>
+                <li>Tel:+250788737287 </i></li>
+              
             </div>
         </div>
         </div></div>
